<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:background="@color/app_background">

        <Button
            android:id="@+id/progressQuery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/app_background"
            android:gravity="center"
            android:text="@string/progressQuery"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/ll_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/paperTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/paperTitle"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/paperFinished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/company_en"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/submitPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/app_background"
            android:gravity="center"
            android:text="@string/submitPaper"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.87"
        android:background="@color/white"></ViewFlipper>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:background="@color/app_background">

        <TextView
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dp"
            android:background="@drawable/nettest_icon_previous2"
            android:gravity="center_horizontal|bottom"
            android:text="@string/lastQuestion"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:background="@drawable/nettest_icon_next1"
            android:gravity="center_horizontal|bottom"
            android:text="@string/nextQuestion"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>