<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/trainnet_relativeborder">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/menu_home"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/menu_home"
        android:textColor="@color/dark_gray"
        android:textSize="20sp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/tv_subTitle"
        android:layout_gravity="center_horizontal"
        android:background="@color/dark_gray" />

    <TextView
        android:id="@+id/tv_iKnow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/iKnow"
        android:textColor="@color/app_blue"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/line"
        android:layout_marginLeft="50dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/OK"
        android:textColor="@color/app_blue"
        android:textSize="22sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/line"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/Cancel"
        android:textColor="@color/app_blue"
        android:textSize="22sp"
        android:visibility="gone" />

</RelativeLayout>