<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_state"
            android:layout_width="85dp"
            android:layout_height="25dp"
            android:background="@drawable/trainnet_home_audit"
            android:contentDescription="@string/pic"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <ImageView
                android:id="@+id/iv_count"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:layout_alignRight="@+id/tv_count"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:contentDescription="@string/pic"
                android:paddingBottom="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/trainnet_home_point2" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="10dp"
                android:paddingRight="1dp"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textIsSelectable="false"
                android:textSize="12sp"
                android:textStyle="bold|normal" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center_vertical|left"
        android:text="@string/menu_home"
        android:textColor="@color/black"
        android:textSize="13sp" />

</LinearLayout>