<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/gray_white"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/menu_home"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/tv_title"
        android:layout_gravity="center_horizontal"
        android:background="@color/light_dark_gray" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginLeft="40dp"
        android:gravity="left"
        android:padding="8dp"
        android:text="@string/testQuestion"
        android:textColor="@color/light_dark_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_questionNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_toRightOf="@+id/tv_question"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/testQuestion"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/tv_question"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:background="@color/light_dark_gray" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginLeft="40dp"
        android:gravity="left"
        android:padding="8dp"
        android:text="@string/testScore"
        android:textColor="@color/light_dark_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_scoreNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_toRightOf="@+id/tv_question"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/testScore"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/tv_score"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:background="@color/dark_gray" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:layout_marginLeft="40dp"
        android:gravity="left"
        android:padding="8dp"
        android:text="@string/testTime"
        android:textColor="@color/light_dark_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_timeNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:layout_toRightOf="@+id/tv_question"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/testTime"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/tv_time"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:background="@color/light_dark_gray" />

    <TextView
        android:id="@+id/tv_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line4"
        android:layout_margin="15dp"
        android:background="@drawable/nettest_updateborder"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/testBegin"
        android:textColor="@color/white"
        android:textSize="24sp" />

</RelativeLayout>