<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left|center_vertical"
        android:layout_weight="0.10"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/trainnet_button_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/trainnet_person"
            android:contentDescription="@string/pic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.80"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trainnet_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/company_cn"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/trainnet_subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/company_en"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:visibility="gone" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.10"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/trainnet_msg"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/trainnet_msg"
            android:contentDescription="@string/pic"
            android:onClick="gotoChat" />
    </LinearLayout>
</LinearLayout>